vpc.tf
resource "aws_vpc" "main" {
    cidr_block = local.vpc_cidr

    enable_dns_support = true
    enable_dns_hostnames = true

    tags = {
        Name = "dev-main"
    }

}
